--- a/index.html
+++ b/index.html
@@ -1,19 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <title>HTML 5 Boilerplate</title>
+    <title>Powerwashers!</title>
     <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <header>
+</head>
+
+<body>
+    <header id="header">
+        <div id="title-container">
+            <img id="header-img">
+            <h1 id="header-title">Powerwashers!</h1>
+            <p id="header-text">
+                A (fake) powerwashing company
+            </p>
+        </div>
+
+
+        <nav id="nav-bar">
+            <p><a class="nav-link">Placeholder</aid>
+            </p>
+            <p><a class="nav-link">Placeholder</a></p>
+            <p><a class="nav-link">Placeholder</a></p>
+        </nav>
     </header>
 
-    <main>
-        
-    </main>
+
+    <div id="banner">
+        <h2>
+            Our hero in the fight against dirt and grime!
+        </h2>
+        <form>
+            <!-- email form input -->
+            <input>
+        </form>
+    </div>
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor ligula. Vivamus lacus lacus,
+            facilisis vitae tincidunt quis, volutpat sit amet orci. Sed ornare justo nec metus euismod finibus. Duis
+            in metus vel quam tempor maximus nec vitae lectus. Morbi pulvinar ligula a leo malesuada, non rutrum
+            lorem molestie. Ut sed ligula vel mauris ornare maximus. Nam et dui non eros feugiat rutrum ac quis
+            justo. Maecenas vitae nisl a ligula pharetra feugiat.
+
+            Sed non nunc congue, sodales arcu venenatis, placerat odio. Donec dignissim efficitur odio, vitae
+            accumsan nisi fermentum sed. Praesent laoreet ex eu orci convallis consectetur. Vestibulum et turpis
+            sapien. Nullam interdum felis et consequat volutpat. Etiam vel porttitor tortor. Quisque elementum, enim
+            sit amet interdum pellentesque, ex dui ultrices risus, nec bibendum metus turpis nec quam. Quisque
+            maximus lacus eu cursus imperdiet. Phasellus non dignissim ipsum, at congue lectus. Nullam feugiat lacus
+            eu condimentum tristique. Duis vulputate nisl commodo, bibendum orci eu, sollicitudin massa. Nam in
+            hendrerit lacus. Ut tortor dui, dignissim vitae purus eget, pharetra pharetra urna.
+
+            Aliquam dapibus enim id magna vestibulum, nec pharetra tortor vestibulum. Nulla posuere non elit ac
+            efficitur. Etiam ullamcorper leo sit amet justo mattis, et commodo purus feugiat. Vestibulum dictum
+            condimentum feugiat. Sed neque leo, vulputate at libero non, placerat hendrerit arcu. Pellentesque nunc
+            magna, finibus non bibendum a, convallis vel nisl. Ut ornare elit eu pulvinar hendrerit. Sed vitae dui a
+            nibh fermentum molestie. Cras hendrerit et mauris eu commodo. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit.
+
+            Sed id tortor nec tellus lacinia efficitur. Nunc convallis ornare mi eu condimentum. Nullam ornare velit
+            vitae maximus gravida. Pellentesque at egestas ligula. Maecenas a bibendum eros. Quisque a arcu
+            tristique, rhoncus lorem ut, pharetra eros. Integer non ipsum laoreet ipsum tincidunt fermentum.
+
+            Nulla ac dignissim risus. Duis rutrum, quam eget elementum ultrices, erat urna posuere felis, et
+            tincidunt diam mi sed purus. Nullam porta turpis nec ante mollis pretium nec a augue. Sed sodales erat
+            vel volutpat pharetra. Mauris mattis est est, in scelerisque felis aliquam vitae. Vestibulum odio ipsum,
+            aliquet ut mauris sit amet, luctus aliquet odio. Cras semper eleifend ornare. Pellentesque habitant
+            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam non mauris scelerisque,
+            efficitur eros eu, rutrum velit. Nulla ut ex vestibulum, pharetra nisi eu, dictum purus. Nunc ultrices
+            nibh at convallis convallis. Nulla dapibus nunc in aliquet tincidunt.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor ligula. Vivamus lacus lacus,
+            facilisis vitae tincidunt quis, volutpat sit amet orci. Sed ornare justo nec metus euismod finibus. Duis
+            in metus vel quam tempor maximus nec vitae lectus. Morbi pulvinar ligula a leo malesuada, non rutrum
+            lorem molestie. Ut sed ligula vel mauris ornare maximus. Nam et dui non eros feugiat rutrum ac quis
+            justo. Maecenas vitae nisl a ligula pharetra feugiat.
+
+            Sed non nunc congue, sodales arcu venenatis, placerat odio. Donec dignissim efficitur odio, vitae
+            accumsan nisi fermentum sed. Praesent laoreet ex eu orci convallis consectetur. Vestibulum et turpis
+            sapien. Nullam interdum felis et consequat volutpat. Etiam vel porttitor tortor. Quisque elementum, enim
+            sit amet interdum pellentesque, ex dui ultrices risus, nec bibendum metus turpis nec quam. Quisque
+            maximus lacus eu cursus imperdiet. Phasellus non dignissim ipsum, at congue lectus. Nullam feugiat lacus
+            eu condimentum tristique. Duis vulputate nisl commodo, bibendum orci eu, sollicitudin massa. Nam in
+            hendrerit lacus. Ut tortor dui, dignissim vitae purus eget, pharetra pharetra urna.
+
+            Aliquam dapibus enim id magna vestibulum, nec pharetra tortor vestibulum. Nulla posuere non elit ac
+            efficitur. Etiam ullamcorper leo sit amet justo mattis, et commodo purus feugiat. Vestibulum dictum
+            condimentum feugiat. Sed neque leo, vulputate at libero non, placerat hendrerit arcu. Pellentesque nunc
+            magna, finibus non bibendum a, convallis vel nisl. Ut ornare elit eu pulvinar hendrerit. Sed vitae dui a
+            nibh fermentum molestie. Cras hendrerit et mauris eu commodo. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit.
+
+            Sed id tortor nec tellus lacinia efficitur. Nunc convallis ornare mi eu condimentum. Nullam ornare velit
+            vitae maximus gravida. Pellentesque at egestas ligula. Maecenas a bibendum eros. Quisque a arcu
+            tristique, rhoncus lorem ut, pharetra eros. Integer non ipsum laoreet ipsum tincidunt fermentum.
+
+            Nulla ac dignissim risus. Duis rutrum, quam eget elementum ultrices, erat urna posuere felis, et
+            tincidunt diam mi sed purus. Nullam porta turpis nec ante mollis pretium nec a augue. Sed sodales erat
+            vel volutpat pharetra. Mauris mattis est est, in scelerisque felis aliquam vitae. Vestibulum odio ipsum,
+            aliquet ut mauris sit amet, luctus aliquet odio. Cras semper eleifend ornare. Pellentesque habitant
+            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam non mauris scelerisque,
+            efficitur eros eu, rutrum velit. Nulla ut ex vestibulum, pharetra nisi eu, dictum purus. Nunc ultrices
+            nibh at convallis convallis. Nulla dapibus nunc in aliquet tincidunt.
+
+        </p>
+    </div>
+
+    <div>
+        <!-- Embed Video Here -->
+        <h1 style="text-align: center">Video Placeholder</h1>
+    </div>
 
     <footer>
+        <h1>Footer content placeholder</h1>
     </footer>
-  </body>
+</body>
+
 </html>
