fixed bad code typo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 
         <nav id="nav-bar">
-            <p><a class="nav-link">Placeholder</aid>
-            </p>
+            <p><a class="nav-link">Placeholder</a></p>
             <p><a class="nav-link">Placeholder</a></p>
             <p><a class="nav-link">Placeholder</a></p>
         </nav>
