refined layout; added some content/additional placeholders

--- a/index.html
+++ b/index.html
@@ -5,113 +5,87 @@
     <meta charset="UTF-8">
     <title>Powerwashers!</title>
     <link rel="stylesheet" href="index.css">
+    <!-- Square Enix (NA) Presskits -->
+    <!-- https://press.na.square-enix.com/DECIMATE-DECADES-OF-DIRT-IN-BRAND-NEW-POWERWASH-SIMULATOR-CONTENT-OUT- -->
+    <!-- https://press.na.square-enix.com/Square-Enix-Collective/Focus/POWERWASH-SIMULATOR#?tab=logos-4 -->
+
+    <!-- igdb presskit -->
+    <!-- https://www.igdb.com/games/powerwash-simulator/presskit -->
 </head>
 
 <body>
     <header id="header">
         <div id="title-container">
-            <img id="header-img">
+            <!-- Logo Provided By
+                 "https://press.na.square-enix.com/DECIMATE-DECADES-OF-DIRT-IN-BRAND-NEW-POWERWASH-SIMULATOR-CONTENT-OUT-" -->
+            <img id="header-img" src="assets/PWS-logo-1280x720.png">
             <h1 id="header-title">Powerwashers!</h1>
             <p id="header-text">
-                A (fake) powerwashing company
+                A (Fake) Powerwashing Company
             </p>
         </div>
 
 
         <nav id="nav-bar">
-            <p><a class="nav-link">Placeholder</a></p>
-            <p><a class="nav-link">Placeholder</a></p>
-            <p><a class="nav-link">Placeholder</a></p>
+            <!-- make navbar sticky -->
+            <p><a class="nav-link" href="#banner">Features</a></p>
+            <p><a class="nav-link" href="#video-wrapper">How It Works</a></p>
+            <p><a class="nav-link" href="#price">Pricing</a></p>
         </nav>
     </header>
 
 
     <div id="banner">
         <h2>
-            Our hero in the fight against dirt and grime!
+            Join the fight against dirt and grime!
         </h2>
         <form>
             <!-- email form input -->
             <input>
+            <submit></submit>
         </form>
     </div>
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor ligula. Vivamus lacus lacus,
-            facilisis vitae tincidunt quis, volutpat sit amet orci. Sed ornare justo nec metus euismod finibus. Duis
-            in metus vel quam tempor maximus nec vitae lectus. Morbi pulvinar ligula a leo malesuada, non rutrum
-            lorem molestie. Ut sed ligula vel mauris ornare maximus. Nam et dui non eros feugiat rutrum ac quis
-            justo. Maecenas vitae nisl a ligula pharetra feugiat.
 
-            Sed non nunc congue, sodales arcu venenatis, placerat odio. Donec dignissim efficitur odio, vitae
-            accumsan nisi fermentum sed. Praesent laoreet ex eu orci convallis consectetur. Vestibulum et turpis
-            sapien. Nullam interdum felis et consequat volutpat. Etiam vel porttitor tortor. Quisque elementum, enim
-            sit amet interdum pellentesque, ex dui ultrices risus, nec bibendum metus turpis nec quam. Quisque
-            maximus lacus eu cursus imperdiet. Phasellus non dignissim ipsum, at congue lectus. Nullam feugiat lacus
-            eu condimentum tristique. Duis vulputate nisl commodo, bibendum orci eu, sollicitudin massa. Nam in
-            hendrerit lacus. Ut tortor dui, dignissim vitae purus eget, pharetra pharetra urna.
+    <div id="features">
+        <img src="https://via.placeholder.com/80">
+        <h1>Placeholder</h1>
 
-            Aliquam dapibus enim id magna vestibulum, nec pharetra tortor vestibulum. Nulla posuere non elit ac
-            efficitur. Etiam ullamcorper leo sit amet justo mattis, et commodo purus feugiat. Vestibulum dictum
-            condimentum feugiat. Sed neque leo, vulputate at libero non, placerat hendrerit arcu. Pellentesque nunc
-            magna, finibus non bibendum a, convallis vel nisl. Ut ornare elit eu pulvinar hendrerit. Sed vitae dui a
-            nibh fermentum molestie. Cras hendrerit et mauris eu commodo. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
+        <img src="https://via.placeholder.com/80">
+        <h1>Placeholder Placeholder</h1>
 
-            Sed id tortor nec tellus lacinia efficitur. Nunc convallis ornare mi eu condimentum. Nullam ornare velit
-            vitae maximus gravida. Pellentesque at egestas ligula. Maecenas a bibendum eros. Quisque a arcu
-            tristique, rhoncus lorem ut, pharetra eros. Integer non ipsum laoreet ipsum tincidunt fermentum.
-
-            Nulla ac dignissim risus. Duis rutrum, quam eget elementum ultrices, erat urna posuere felis, et
-            tincidunt diam mi sed purus. Nullam porta turpis nec ante mollis pretium nec a augue. Sed sodales erat
-            vel volutpat pharetra. Mauris mattis est est, in scelerisque felis aliquam vitae. Vestibulum odio ipsum,
-            aliquet ut mauris sit amet, luctus aliquet odio. Cras semper eleifend ornare. Pellentesque habitant
-            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam non mauris scelerisque,
-            efficitur eros eu, rutrum velit. Nulla ut ex vestibulum, pharetra nisi eu, dictum purus. Nunc ultrices
-            nibh at convallis convallis. Nulla dapibus nunc in aliquet tincidunt.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor ligula. Vivamus lacus lacus,
-            facilisis vitae tincidunt quis, volutpat sit amet orci. Sed ornare justo nec metus euismod finibus. Duis
-            in metus vel quam tempor maximus nec vitae lectus. Morbi pulvinar ligula a leo malesuada, non rutrum
-            lorem molestie. Ut sed ligula vel mauris ornare maximus. Nam et dui non eros feugiat rutrum ac quis
-            justo. Maecenas vitae nisl a ligula pharetra feugiat.
-
-            Sed non nunc congue, sodales arcu venenatis, placerat odio. Donec dignissim efficitur odio, vitae
-            accumsan nisi fermentum sed. Praesent laoreet ex eu orci convallis consectetur. Vestibulum et turpis
-            sapien. Nullam interdum felis et consequat volutpat. Etiam vel porttitor tortor. Quisque elementum, enim
-            sit amet interdum pellentesque, ex dui ultrices risus, nec bibendum metus turpis nec quam. Quisque
-            maximus lacus eu cursus imperdiet. Phasellus non dignissim ipsum, at congue lectus. Nullam feugiat lacus
-            eu condimentum tristique. Duis vulputate nisl commodo, bibendum orci eu, sollicitudin massa. Nam in
-            hendrerit lacus. Ut tortor dui, dignissim vitae purus eget, pharetra pharetra urna.
-
-            Aliquam dapibus enim id magna vestibulum, nec pharetra tortor vestibulum. Nulla posuere non elit ac
-            efficitur. Etiam ullamcorper leo sit amet justo mattis, et commodo purus feugiat. Vestibulum dictum
-            condimentum feugiat. Sed neque leo, vulputate at libero non, placerat hendrerit arcu. Pellentesque nunc
-            magna, finibus non bibendum a, convallis vel nisl. Ut ornare elit eu pulvinar hendrerit. Sed vitae dui a
-            nibh fermentum molestie. Cras hendrerit et mauris eu commodo. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-
-            Sed id tortor nec tellus lacinia efficitur. Nunc convallis ornare mi eu condimentum. Nullam ornare velit
-            vitae maximus gravida. Pellentesque at egestas ligula. Maecenas a bibendum eros. Quisque a arcu
-            tristique, rhoncus lorem ut, pharetra eros. Integer non ipsum laoreet ipsum tincidunt fermentum.
-
-            Nulla ac dignissim risus. Duis rutrum, quam eget elementum ultrices, erat urna posuere felis, et
-            tincidunt diam mi sed purus. Nullam porta turpis nec ante mollis pretium nec a augue. Sed sodales erat
-            vel volutpat pharetra. Mauris mattis est est, in scelerisque felis aliquam vitae. Vestibulum odio ipsum,
-            aliquet ut mauris sit amet, luctus aliquet odio. Cras semper eleifend ornare. Pellentesque habitant
-            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam non mauris scelerisque,
-            efficitur eros eu, rutrum velit. Nulla ut ex vestibulum, pharetra nisi eu, dictum purus. Nunc ultrices
-            nibh at convallis convallis. Nulla dapibus nunc in aliquet tincidunt.
-
-        </p>
+        <img src="https://via.placeholder.com/80">
+        <h1>Placeholder Placeholder Placeholder</h1>
     </div>
 
-    <div>
+    <div id="video-wrapper">
         <!-- Embed Video Here -->
+        <!-- https://www.youtube.com/watch?v=unvuuweAW_w -->
         <h1 style="text-align: center">Video Placeholder</h1>
     </div>
 
+    <div id="price">
+        <h1 id="price-header">Pricing</h1>
+        <div id="price-flex">
+            <div>
+                <h2>Urban X U2</h2>
+            </div>
+
+            <div>
+                <h2>Prima Vista 1500</h2>
+            </div>
+
+            <div>
+                <h2>Prima Vista 3000</h2>
+            </div>
+
+            <div>
+                <h2>Prima Vista PRO</h2>
+            </div>
+        </div>
+    </div>
+
     <footer>
-        <h1>Footer content placeholder</h1>
+        <h1>Footer Content Placeholder</h1>
     </footer>
 </body>
 
