--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
 
 <body>
     <header id="header">
-        <div id="title-container">
-            <!-- Logo Provided By
-                 "https://press.na.square-enix.com/DECIMATE-DECADES-OF-DIRT-IN-BRAND-NEW-POWERWASH-SIMULATOR-CONTENT-OUT-" -->
-            <img id="header-img" src="assets/PWS-logo-1280x720.png">
-            <h1 id="header-title">Powerwashers!</h1>
-            <p id="header-text">
-                A (Fake) Powerwashing Company
-            </p>
+        <div id="header-flex-wrapper">
+            <div id="title-container">
+                <!-- Logo Provided By
+                     "https://press.na.square-enix.com/DECIMATE-DECADES-OF-DIRT-IN-BRAND-NEW-POWERWASH-SIMULATOR-CONTENT-OUT-" -->
+                <img id="header-img" src="assets/PWS-logo-1280x720.png">
+                <h1 id="header-title">Powerwashers!</h1>
+                <p id="header-text">
+                    A (Fake) Powerwashing Company
+                </p>
+            </div>
+    
+            <nav id="nav-bar">
+                <!-- make navbar sticky -->
+                <p><a class="nav-link" href="#banner">Features</a></p>
+                <p><a class="nav-link" href="#video-wrapper">How It Works</a></p>
+                <p><a class="nav-link" href="#price">Pricing</a></p>
+            </nav>
         </div>
-
-
-        <nav id="nav-bar">
-            <!-- make navbar sticky -->
-            <p><a class="nav-link" href="#banner">Features</a></p>
-            <p><a class="nav-link" href="#video-wrapper">How It Works</a></p>
-            <p><a class="nav-link" href="#price">Pricing</a></p>
-        </nav>
     </header>
+    <div id="source">
+        <p>Source of Images included in <a target="" href="#footer">The Footer</a></p>
+    </div>
 
 
     <div id="banner">
@@ -84,7 +88,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="footer">
         <h1>Footer Content Placeholder</h1>
     </footer>
 </body>
