--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
         </div>
     </header>
-    <div id="source">
+    <div id="sub-header">
         <p>Source of Images included in <a target="" href="#footer">The Footer</a></p>
     </div>
 
